name:           happlets
version:        0.1.0.0
synopsis:       "Haskell Applets" provides event handlers and a canvas for building simple GUI apps.
category:       GUI, Game
homepage:       https://github.com/RaminHAL9001/happlets#readme
bug-reports:    https://github.com/RaminHAL9001/happlets/issues
author:         Ramin Honary
maintainer:     ramin.honary@gmail.com
copyright:      2017-2019 Ramin Honary
license:        AGPL
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type:     git
  location: https://github.com/RaminHAL9001/happlets

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Happlets
    Happlets.Audio
    Happlets.Config
    Happlets.Draw
    Happlets.Draw.Color
    Happlets.Draw.SampCoord
    Happlets.Draw.Text
    Happlets.Draw.Types2D
    Happlets.Event
    Happlets.Initialize
    Happlets.Provider
    Happlets.Variable
    Happlets.GUI
  other-modules:
    Paths_happlets
  default-extensions:
    DeriveDataTypeable
    DeriveFunctor
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    ImplicitParams
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
  ghc-options:
    -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind
  build-depends:
      base
    , containers
    , lens
    , linear
    , mtl
    , semigroups
    , text
    , time
    , transformers
    , vector
