name:           happlets
version:        0.1.0.0
synopsis:       "Haskell Applets" provides event handlers and a canvas for building simple GUI apps.
category:       GUI, Game
homepage:       https://github.com/RaminHAL9001/happlets#readme
bug-reports:    https://github.com/RaminHAL9001/happlets/issues
author:         Ramin Honary
maintainer:     ramin.honary@gmail.com
copyright:      2017-2019 Ramin Honary
license:        AGPL
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type:     git
  location: https://github.com/RaminHAL9001/happlets

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Happlets
    Happlets.Logging
    Happlets.Model
    Happlets.Model.Audio
    Happlets.Model.GUI
    Happlets.Model.Registry
    Happlets.Model.Worker
    Happlets.Control
    Happlets.Control.Animate
    Happlets.Control.Consequence
    Happlets.Control.InputDevice
    Happlets.Control.Keyboard
    Happlets.Control.Mouse
    Happlets.Control.Resize
    Happlets.Control.Trackpad
    Happlets.Control.WindowManager
    Happlets.Initialize
    Happlets.Provider.React
    Happlets.Provider.ConfigState
    Happlets.Scene
    Happlets.View
    Happlets.View.Audio
    Happlets.View.Canvas
    Happlets.View.Color
    Happlets.View.Text
    Happlets.View.Types2D
  other-modules:
    Paths_happlets
  default-extensions:
    DeriveDataTypeable
    DeriveFunctor
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    ImplicitParams
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
  ghc-options:
    -Wall -Werror -fno-warn-name-shadowing -fno-warn-unused-do-bind
  build-depends:
      base
    , containers
    , lens
    , linear
    , mtl
    , semigroups
    , text
    , time
    , transformers
    , vector
